# cosmic-ext-applet-external-monitor-brightness

./: Cargo.toml  README.md  justfile
data/: com.maciekk64.CosmicAppletExternalMonitorBrightness.desktop  com.maciekk64.CosmicExtAppletExternalMonitorBrightness.desktop
i18n/en/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/pl/: cosmic_ext_applet_external_monitor_brightness.ftl
res/: io.github.maciekk64.CosmicExtAppletExternalMonitorBrightness.desktop
src/: main.rs  monitor.rs  window.rs
