[package]
name = "cosmic-ext-applet-external-monitor-brightness"
version = "0.1.0"
edition = "2021"

[dependencies]
ddc-hi = "0.4.1"
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false, features = [
    "libcosmic",
    "once_cell",
] }
i18n-embed = { version = "0.14.1", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.8"
rust-embed = "8.3.0"
once_cell = "1.19.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet", "tokio", "wayland"]
